[gd_scene load_steps=12 format=4 uid="uid://b0x8mffm02dho"]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1_ljdfv"]
[ext_resource type="Texture2D" uid="uid://b6ibgtmbdjs3a" path="res://assets/sky_back.png" id="1_stcux"]
[ext_resource type="Script" path="res://scripts/sky_middle.gd" id="2_ei6ni"]
[ext_resource type="Texture2D" uid="uid://c4cdbvocxa36o" path="res://assets/sky_middle.png" id="3_gpbfv"]
[ext_resource type="Script" path="res://scripts/sky_fore.gd" id="4_2x7xm"]
[ext_resource type="Texture2D" uid="uid://cackqck3fgums" path="res://assets/sky_fore.png" id="5_iqqps"]
[ext_resource type="TileSet" uid="uid://c1vwb5t31smkh" path="res://tilemap resources/grain_fill_map_test.tres" id="6_qpqdd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_oewmr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o5j5j"]
bg_color = Color(0.851769, 0.851769, 0.851769, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wtkq5"]
bg_color = Color(0.572988, 0.572988, 0.572988, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gm08t"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ljdfv")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -244.0
offset_top = -104.0
offset_right = 235.0
offset_bottom = 95.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 7

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_oewmr")
theme_override_styles/hover = SubResource("StyleBoxFlat_o5j5j")
theme_override_styles/pressed = SubResource("StyleBoxFlat_wtkq5")
theme_override_styles/normal = SubResource("StyleBoxFlat_gm08t")
text = "Start "

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_oewmr")
theme_override_styles/hover = SubResource("StyleBoxFlat_o5j5j")
theme_override_styles/pressed = SubResource("StyleBoxFlat_wtkq5")
theme_override_styles/normal = SubResource("StyleBoxFlat_gm08t")
text = "Options"

[node name="Button3" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_oewmr")
theme_override_styles/hover = SubResource("StyleBoxFlat_o5j5j")
theme_override_styles/pressed = SubResource("StyleBoxFlat_wtkq5")
theme_override_styles/normal = SubResource("StyleBoxFlat_gm08t")
text = "Exit"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -218.0
offset_top = -222.0
offset_right = 239.0
offset_bottom = -111.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "Grain Harvester"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="SkyBack" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0, 0)
motion_mirroring = Vector2(1440, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/SkyBack"]
position = Vector2(128, 209)
texture = ExtResource("1_stcux")

[node name="SkyMiddle" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0, 0)
motion_mirroring = Vector2(1440, 0)
script = ExtResource("2_ei6ni")

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/SkyMiddle"]
position = Vector2(128, 209)
texture = ExtResource("3_gpbfv")

[node name="SkyFore" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0, 0)
motion_mirroring = Vector2(1440, 0)
script = ExtResource("4_2x7xm")

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/SkyFore"]
position = Vector2(126, 368)
texture = ExtResource("5_iqqps")

[node name="Grain_and_Ground" type="TileMapLayer" parent="."]
position = Vector2(-7, 25)
scale = Vector2(2, 2)
tile_map_data = PackedByteArray("AAD//wgAAAACAAEAAAD//wkAAAACAAIAAAD//woAAAACAAIAAAD//wsAAAACAAIAAAD//wwAAAACAAIAAAD//w0AAAACAAIAAAD//w4AAAACAAIAAAD//w8AAAACAAIAAAD//xAAAAACAAIAAAD//xEAAAACAAIAAAAAAAgAAAACAAEAAAAAAAkAAAACAAIAAAAAAAoAAAACAAIAAAAAAAsAAAACAAIAAAAAAAwAAAACAAEAAAAAAA0AAAACAAIAAAAAAA4AAAACAAIAAAAAAA8AAAACAAIAAAAAABAAAAACAAIAAAAAABEAAAACAAIAAAABAAYAAAAEAAEAAAABAAcAAAAEAAIAAAABAAgAAAACAAEAAAABAAkAAAACAAIAAAABAAoAAAACAAIAAAABAAsAAAACAAIAAAABAAwAAAACAAEAAAABAA0AAAACAAIAAAABAA4AAAACAAIAAAABAA8AAAACAAIAAAABABAAAAACAAIAAAABABEAAAACAAIAAAACAAcAAAAHAAAAAAACAAgAAAACAAEAAAACAAkAAAACAAIAAAACAAoAAAACAAIAAAACAAsAAAACAAIAAAACAAwAAAACAAEAAAACAA0AAAACAAIAAAACAA4AAAACAAIAAAACAA8AAAACAAIAAAACABAAAAACAAIAAAACABEAAAACAAIAAAADAAcAAAAIAAAAAAADAAgAAAADAAEAAAADAAkAAAADAAIAAAADAAoAAAADAAIAAAADAAsAAAADAAIAAAADAAwAAAACAAEAAAADAA0AAAACAAIAAAADAA4AAAACAAIAAAADAA8AAAACAAIAAAADABAAAAACAAIAAAADABEAAAACAAIAAAAEAAwAAAACAAEAAAAEAA0AAAACAAIAAAAEAA4AAAACAAIAAAAEAA8AAAACAAIAAAAEABAAAAACAAIAAAAEABEAAAACAAIAAAAFAAwAAAACAAEAAAAFAA0AAAACAAIAAAAFAA4AAAACAAIAAAAFAA8AAAACAAIAAAAFABAAAAACAAIAAAAFABEAAAACAAIAAAAGAAwAAAACAAEAAAAGAA0AAAACAAIAAAAGAA4AAAACAAIAAAAGAA8AAAACAAIAAAAGABAAAAACAAIAAAAGABEAAAACAAIAAAAHAAsAAAAGAAAAAAAHAAwAAAACAAEAAAAHAA0AAAACAAIAAAAHAA4AAAACAAIAAAAHAA8AAAACAAIAAAAHABAAAAACAAIAAAAHABEAAAACAAIAAAAIAAwAAAACAAEAAAAIAA0AAAACAAIAAAAIAA4AAAACAAIAAAAIAA8AAAACAAIAAAAIABAAAAACAAIAAAAIABEAAAACAAIAAAAJAAwAAAACAAEAAAAJAA0AAAACAAIAAAAJAA4AAAACAAIAAAAJAA8AAAACAAIAAAAJABAAAAACAAIAAAAJABEAAAACAAIAAAAKAAwAAAACAAEAAAAKAA0AAAACAAIAAAAKAA4AAAACAAIAAAAKAA8AAAACAAIAAAAKABAAAAACAAIAAAAKABEAAAACAAIAAAALAAwAAAACAAEAAAALAA0AAAACAAIAAAALAA4AAAACAAIAAAALAA8AAAACAAIAAAALABAAAAACAAIAAAALABEAAAACAAIAAAAMAAwAAAACAAEAAAAMAA0AAAACAAIAAAAMAA4AAAACAAIAAAAMAA8AAAACAAIAAAAMABAAAAACAAIAAAAMABEAAAACAAIAAAANAAwAAAACAAEAAAANAA0AAAACAAIAAAANAA4AAAACAAIAAAANAA8AAAACAAIAAAANABAAAAACAAIAAAANABEAAAACAAIAAAAOAAwAAAACAAEAAAAOAA0AAAACAAIAAAAOAA4AAAACAAIAAAAOAA8AAAACAAIAAAAOABAAAAACAAIAAAAOABEAAAACAAIAAAAPAAwAAAACAAEAAAAPAA0AAAACAAIAAAAPAA4AAAACAAIAAAAPAA8AAAACAAIAAAAPABAAAAACAAIAAAAPABEAAAACAAIAAAAQAAwAAAACAAEAAAAQAA0AAAACAAIAAAAQAA4AAAACAAIAAAAQAA8AAAACAAIAAAAQABAAAAACAAIAAAAQABEAAAACAAIAAAARAAwAAAACAAEAAAARAA0AAAACAAIAAAARAA4AAAACAAIAAAARAA8AAAACAAIAAAARABAAAAACAAIAAAARABEAAAACAAIAAAASAAwAAAACAAEAAAASAA0AAAACAAIAAAASAA4AAAACAAIAAAASAA8AAAACAAIAAAASABAAAAACAAIAAAASABEAAAACAAIAAAATAAwAAAACAAEAAAATAA0AAAACAAIAAAATAA4AAAACAAIAAAATAA8AAAACAAIAAAATABAAAAACAAIAAAATABEAAAACAAIAAAAUAAwAAAACAAEAAAAUAA0AAAACAAIAAAAUAA4AAAACAAIAAAAUAA8AAAACAAIAAAAUABAAAAACAAIAAAAUABEAAAACAAIAAAAVAAwAAAACAAEAAAAVAA0AAAACAAIAAAAVAA4AAAACAAIAAAAVAA8AAAACAAIAAAAVABAAAAACAAIAAAAVABEAAAACAAIAAAAWAAoAAAABAAEAAAAWAAsAAAABAAIAAAAWAAwAAAACAAEAAAAWAA0AAAACAAIAAAAWAA4AAAACAAIAAAAWAA8AAAACAAIAAAAWABAAAAACAAIAAAAWABEAAAACAAIAAAAXAAoAAAACAAEAAAAXAAsAAAACAAIAAAAXAAwAAAACAAEAAAAXAA0AAAACAAIAAAAXAA4AAAACAAIAAAAXAA8AAAACAAIAAAAXABAAAAACAAIAAAAXABEAAAACAAIAAAAYAAoAAAACAAEAAAAYAAsAAAACAAIAAAAYAAwAAAACAAEAAAAYAA0AAAACAAIAAAAYAA4AAAACAAIAAAAYAA8AAAACAAIAAAAYABAAAAACAAIAAAAYABEAAAACAAIAAAAZAAoAAAACAAEAAAAZAAsAAAACAAIAAAAZAAwAAAACAAEAAAAZAA0AAAACAAIAAAAZAA4AAAACAAIAAAAZAA8AAAACAAIAAAAZABAAAAACAAIAAAAZABEAAAACAAIAAAAaAAgAAAAEAAEAAAAaAAkAAAAEAAIAAAAaAAoAAAACAAEAAAAaAAsAAAACAAIAAAAaAAwAAAACAAEAAAAaAA0AAAACAAIAAAAaAA4AAAACAAIAAAAaAA8AAAACAAIAAAAaABAAAAACAAIAAAAaABEAAAACAAIAAAAbAAkAAAAJAAAAAAAbAAoAAAACAAEAAAAbAAsAAAACAAIAAAAbAAwAAAACAAEAAAAbAA0AAAACAAIAAAAbAA4AAAACAAIAAAAbAA8AAAACAAIAAAAbABAAAAACAAIAAAAbABEAAAACAAIAAAAcAAoAAAACAAEAAAAcAAsAAAACAAIAAAAcAAwAAAACAAEAAAAcAA0AAAACAAIAAAAcAA4AAAACAAIAAAAcAA8AAAACAAIAAAAcABAAAAACAAIAAAAcABEAAAACAAIAAAA=")
tile_set = ExtResource("6_qpqdd")

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_on_exit_pressed"]
